--- a/css/formacao.css
+++ b/css/formacao.css
@@ -10,11 +10,18 @@
     display: grid;
     grid-template-columns: 1fr 2fr;
     gap: 0 150px;
+    position: relative;
 }
 
 .formacao-container::after{
     content: "";
-
+    width: 50px;
+    height: 50px;
+    border-radius: 0 20px;
+    background-image: linear-gradient(to right, #A25CD9, #C992F4);
+    position: absolute;
+    bottom: -25px;
+    
 }
 
 .formacao .subtitulo{
