--- a/css/footer.css
+++ b/css/footer.css
@@ -87,6 +87,7 @@
     .footer-container{
         grid-template-columns: 1fr;
         gap: 50px;
+        padding: 60px 20px;
     }
 
     .footer-contato li{
