--- a/css/header.css
+++ b/css/header.css
@@ -61,6 +61,10 @@
     .header-menu a:hover{
         border: 2px solid #4D0B81;
     }
+
+    .header-menu a:hover::before{
+        content: none; 
+    }
 }
 
 @media (max-width: 520px){
